SQL and modified files